--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 * {
   margin:0;
   padding:0;
-  //border: 1px solid red;
+  border: 1px solid red;
 }
 
 *,*:before,*:after {
@@ -24,7 +24,7 @@ ul li{list-style: none;}
 }
 
 .img {
-    width: 100%;
+//  width: 100%;
 }
 /*******************body background**********/
 body {
@@ -32,11 +32,21 @@ body {
 }
 /********************************************/
 /**************** !HEADER! ******************/
-.header_navigation {
+.header_navigation,
+.footer
+{
   background: #5b483a;
+}
+.header_logo{
+  display: flex;
+  font-size: 400%;
+  justify-content: space-between;
+  align-items: center;
+  color:#5b483a
 }
 /**************** END !HEADER!***************/
 /**************** !MAIN! ******************/
+
 /**************** END !MAIN!***************/
 /**************** !FOOTER! ******************/
 /**************** END !FOOTER!***************/
